# modem_communication

./: CMakeLists.txt  README.md  package.xml
src/: Compression.cpp  Compression.hpp  MessageCreation.cpp  desert_listener.cpp  desert_publisher.cpp  prova.cpp  ros_allowed_topics.conf  test_uwApplication.tr  uwApplicationTCP.tcl
